@@ -1,5 +1,5 @@
 '\" t
-.\" Sccsid @(#)find.1	1.42 (gritter) 2/24/05
+.\" Sccsid @(#)find.1	1.43 (gritter) 2/24/05
 .\" Parts taken from find(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -116,6 +116,7 @@ d	directory;
 D	Solaris door;
 f	plain file;
 l	symbolic link;
+n	HP-UX network special file;
 p	named pipe;
 s	socket.
 .TE
